@@ -1,5 +1,8 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+	- work around yet another windows bug: FD_SET actually adds fd's
+          multiple times to the fd_*SET*, despite official MSN docs claiming
+          otherwise. Reported and wel-analysed by Matt Tolton.
 	- define NFSBITS to 0 when EV_SELECT_IS_WINSOCKET to make it compile
           (reported any analysed by Chris Hulbert).
         - fix a bug in ev_ebadf (this function is only used to catch
@@ -7,6 +10,7 @@ Revision history for libev, a high-performance and full-featured event loop.
         - fix a bug in fd_intern on win32 (could lead to compile errors
           under some circumstances, but would work correctly if it compiles).
           reported by Matt Tolton.
+        - (try to) work around missing lstat on windows.
 	- pass in the write fd set as except fd set under windows. windows
           is so uncontrollably lame that it requires this. this means that
           switching off oobinline is not supported (but tcp/ip doesn't
